[gd_scene load_steps=6 format=3 uid="uid://dgj4ye5q61idm"]

[ext_resource type="Script" path="res://gui/GameManager.gd" id="1_7243n"]
[ext_resource type="PackedScene" uid="uid://dfuscteiwe1ky" path="res://gui/pause_menu.tscn" id="2_qxu45"]
[ext_resource type="PackedScene" uid="uid://xjqeqho15uj2" path="res://gui/win_menu.tscn" id="3_8hx3n"]
[ext_resource type="PackedScene" uid="uid://b4ikhscndktlq" path="res://gui/health_bar.tscn" id="3_38bf1"]
[ext_resource type="PackedScene" uid="uid://cvv1yckk62a5g" path="res://gui/loss_menu.tscn" id="4_6dhdd"]

[node name="GameManager" type="Node"]
script = ExtResource("1_7243n")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 41.0
offset_top = 15.0
offset_right = 277.0
offset_bottom = 111.0

[node name="Health_Bar" parent="UI/Panel" instance=ExtResource("3_38bf1")]
layout_mode = 0
offset_left = 9.0
offset_top = 8.0
offset_right = 131.0
offset_bottom = 46.0

[node name="Points" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Points: 0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="FPS" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 164.0
offset_top = 6.0
offset_right = 216.0
offset_bottom = 37.0
text = "FPS"

[node name="PauseMenu" parent="UI" instance=ExtResource("2_qxu45")]
visible = false
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
main_menu_path = "res://gui/main_menu.tscn"

[node name="winMenu" parent="UI" instance=ExtResource("3_8hx3n")]
visible = false

[node name="lossMenu" parent="UI" instance=ExtResource("4_6dhdd")]
visible = false
